# HealthRecommendationsUsingBehaviouralRiskFactorSurveillanceSystem

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 002-rabraham-EDA.ipynb
reports/: 003-removeRedundantCols-profiling.html  004-noAlerts_53Cols-profiling.html  004-noAlerts_54Cols-profiling.html  004-noAlerts_57Cols-profiling.html  005-correctDtypes_dataset.html  005-final_DataWrangled_dataset.html  006-noMissingdataset.html  01-eda-final-hbm_features_profiling_report.html  02-eda-final-hbm_features_profiling_report-2.html  hbm_features_profiling_report.html
scrap_work/: create_column_group_mapping.txt  vs_code_shortcuts.txt
