[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "health_recommendation_system_using_behavioral_risk_factor_surveillance_system"
version = "0.0.1"
description = "A recommendation system using behavioral survey data from US residents"
authors = [
  { name = "Rinky Abraham" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.7"


[tool.ruff]
line-length = 99
src = ["health_recommendation_system_using_behavioral_risk_factor_surveillance_system"]
include = ["pyproject.toml", "health_recommendation_system_using_behavioral_risk_factor_surveillance_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["health_recommendation_system_using_behavioral_risk_factor_surveillance_system"]
force-sort-within-sections = true

